Fix layout issues on small devices

--- a/frontend/src/components/Keyboard/style.scss
+++ b/frontend/src/components/Keyboard/style.scss
@@ -3,7 +3,7 @@
 
   > div {
     display: flex;
-    margin: 0 8px 8px;
+    margin: 0 0px 8px;
 
     > button {
       background: #818384;
@@ -15,6 +15,7 @@
       font-size: 13.3px;
       font-weight: 700;
       height: 58px;
+      padding: 0;
       text-transform: uppercase;
       user-select: none;
 
