--- a/frontend/src/components/Tile/style.scss
+++ b/frontend/src/components/Tile/style.scss
@@ -58,7 +58,7 @@
   width: 100%;
 
   @media only screen and (max-height: 710px) {
-    font-size: 20px;
+    font-size: 15px;
   }
 
   &.absent {
