--- a/frontend/src/pages/PlayPage/style.scss
+++ b/frontend/src/pages/PlayPage/style.scss
@@ -34,6 +34,7 @@
   gap: 20px;
   height: 100%;
   justify-content: center;
+  text-align: center;
 
   > button {
     align-items: center;
@@ -46,6 +47,7 @@
     font-size: 20px;
     font-weight: bold;
     justify-content: center;
+    max-width: 100%;
     padding: 15px 0;
     width: 240px;
 
